@@ -1,3 +1,7 @@
+2006-10-20  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/drivers/sctp2.c: strap out ETSI SACK frequency for testing
+
 2006-10-19  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/test/test-sctp.c: changes to compile on x86_64 with new NPI qos structure
